--- a/package.json
+++ b/package.json
@@ -3,23 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.15.3",
-    "bootstrap": "^3.3.7",
-    "react": "^15.4.2",
-    "react-bootstrap": "^0.30.8",
-    "react-dom": "^15.4.2",
-    "react-timeago": "^3.2.0"
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
+    "react-dom": "^17.0.2",
+    "react-timeago": "^6.2.1"
   },
   "devDependencies": {
-    "enzyme": "^2.7.1",
+    "enzyme": "^3.11.0",
     "jest-enzyme": "^2.1.2",
-    "react-addons-test-utils": "^15.4.2",
-    "react-scripts": "0.9.5"
+    "react-addons-test-utils": "^15.6.2",
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
